fix(zodiaclist): Change text color of ZodiacSignList on hover to black for better visibility in style.css

--- a/page/zodiacsignlists/assets/css/style.css
+++ b/page/zodiacsignlists/assets/css/style.css
@@ -48,7 +48,7 @@ header{
 }
 .navbar #ZodiacSignList:hover{
     background-color: rgb(255, 255, 255);
-    color: rgb(255, 255, 255);
+    color: rgb(0, 0, 0);
 }
 .listcontainer{
     background-color: rgb(201, 201, 201);
